Qiskit Experiment RFC0014 Suggestions Done #1268

--- a/example/example.ipynb
+++ b/example/example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,12 +17,13 @@
     "from qiskit.circuit import QuantumCircuit\n",
     "from typing import List, Optional, Sequence\n",
     "from qiskit.providers.backend import Backend\n",
-    "from qiskit_experiments.framework import BaseExperiment, Options"
+    "from qiskit_experiments.framework import BaseExperiment, Options\n",
+    "from types import MethodType,FunctionType"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +96,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<function Test.test_method at 0x7f15440f2700>\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Test:\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        self.a = 1\n",
+    "\n",
+    "    def test_method(self):\n",
+    "        1+1\n",
+    "    \n",
+    "\n",
+    "obj = Test()\n",
+    "print(obj.test_method.__func__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,15 +133,13 @@
     "                 current : BaseAnalysis | BaseExperiment) -> None:\n",
     "        self.__target = target\n",
     "        self.__current = current\n",
-    "        self.__old_class_methods : dict = dict()\n",
-    "        self.__old_instance_methods :dict = dict()\n",
+    "        self.__old_instance_methods : dict = dict()\n",
+    "    \n",
+    "        class DeafultAttr:\n",
+    "            \n",
+    "            pass\n",
     "        \n",
-    "        class DummyClass:\n",
-    "            \n",
-    "            def __init__(self) -> None:\n",
-    "                pass\n",
-    "            \n",
-    "        self.__base_atr : set = set(DummyClass.__dict__.keys())\n",
+    "        self.__base_attr = DeafultAttr.__dict__\n",
     "    \n",
     "    def __enter__(self):\n",
     "        return self\n",
@@ -121,37 +147,30 @@
     "    def __call__(self):\n",
     "        \n",
     "        self.__old_instance_methods = {key : value for key,value in \n",
-    "                                       self.__target.__dict__.items() \n",
-    "                                       if self.__current.__dict__.get(key,False)}\n",
-    "        self.__old_class_methods = {key : value for key,value in\n",
-    "                                          self.__target.__class__.__dict__.items()\n",
-    "                                          if self.__current.__class__.__dict__.get(key,False)\n",
-    "                                          and key not in self.__base_atr}\n",
-    "        for obj_method_key, class_method_key in zip(\n",
-    "            self.__old_instance_methods.keys(),\n",
-    "            self.__old_class_methods.keys()):\n",
+    "                                       self.__target.__class__.__dict__.items() \n",
+    "                                       if (current_atr := self.__current.__class__. \\\n",
+    "                                       __dict__.get(key,False)) and current_atr not in\n",
+    "                                       self.__base_attr and \n",
+    "                                       isinstance(current_atr,FunctionType)}\n",
+    "        \n",
+    "        for obj_method_key in self.__old_instance_methods.keys():\n",
     "            \n",
-    "            self.__target.__dict__[obj_method_key] = self.__current.__dict__[obj_method_key]\n",
-    "            self.__target.__class__.__dict__[class_method_key] = \\\n",
-    "                self.__current.__class__.__dict__[class_method_key]\n",
+    "            setattr(self.__target,obj_method_key,\n",
+    "                    MethodType(self.__current.__class__.__dict__[obj_method_key],\n",
+    "                               self.__target))\n",
     "        return self.__target\n",
     "    \n",
     "    def __exit__(self, exc_type, exc_val, exc_tb):\n",
-    "        for obj_method_key, class_method_key in zip(\n",
-    "            self.__old_instance_methods.keys(),\n",
-    "            self.__old_class_methods.keys()):\n",
+    "        for obj_method_key in self.__old_instance_methods.keys():\n",
     "            \n",
-    "            self.__target.__dict__[obj_method_key] = \\\n",
-    "                self.__old_instance_methods[obj_method_key]\n",
+    "            delattr(self.__target,obj_method_key)\n",
     "                \n",
-    "            self.__target.__class__.__dict__[class_method_key] = \\\n",
-    "                self.__old_class_methods[class_method_key]\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,26 +406,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'mappingproxy' object does not support item assignment",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[66], line 29\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m RandomizedMeasurement(qc,exp, num_samples\u001b[38;5;241m=\u001b[39mnum_samples) \u001b[38;5;28;01mas\u001b[39;00m exp_new:\n\u001b[0;32m---> 29\u001b[0m     exp \u001b[38;5;241m=\u001b[39m \u001b[43mexp_new\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     30\u001b[0m     expdata_ideal \u001b[38;5;241m=\u001b[39m exp\u001b[38;5;241m.\u001b[39mrun(AerSimulator(), shots\u001b[38;5;241m=\u001b[39mshots)\n",
-      "Cell \u001b[0;32mIn[64], line 55\u001b[0m, in \u001b[0;36mRandomizedMeasurement.__call__\u001b[0;34m(self, *args, **kwds)\u001b[0m\n\u001b[1;32m     54\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m__swapper\u001b[38;5;241m.\u001b[39m\u001b[38;5;21m__exit__\u001b[39m(\u001b[38;5;28;01mTrue\u001b[39;00m,\u001b[38;5;28;01mTrue\u001b[39;00m,\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m---> 55\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mtmp\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[54], line 34\u001b[0m, in \u001b[0;36mBaseManager.__call__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     33\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m__target\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__dict__\u001b[39m[obj_method_key] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m__current\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__dict__\u001b[39m[obj_method_key]\n\u001b[0;32m---> 34\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m__target\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;18;43m__class__\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;18;43m__dict__\u001b[39;49m\u001b[43m[\u001b[49m\u001b[43mclass_method_key\u001b[49m\u001b[43m]\u001b[49m \u001b[38;5;241m=\u001b[39m \\\n\u001b[1;32m     35\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m__current\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__class__\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__dict__\u001b[39m[class_method_key]\n\u001b[1;32m     36\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m__target\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'mappingproxy' object does not support item assignment",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[66], line 28\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[38;5;66;03m# Run ideal randomized meas experiment\u001b[39;00m\n\u001b[1;32m     27\u001b[0m exp \u001b[38;5;241m=\u001b[39m TestMeasurement(qc,num_samples\u001b[38;5;241m=\u001b[39mnum_samples)\n\u001b[0;32m---> 28\u001b[0m \u001b[38;5;28;43;01mwith\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mRandomizedMeasurement\u001b[49m\u001b[43m(\u001b[49m\u001b[43mqc\u001b[49m\u001b[43m,\u001b[49m\u001b[43mexp\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnum_samples\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mnum_samples\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mas\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mexp_new\u001b[49m\u001b[43m:\u001b[49m\n\u001b[1;32m     29\u001b[0m \u001b[43m    \u001b[49m\u001b[43mexp\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mexp_new\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     30\u001b[0m \u001b[43m    \u001b[49m\u001b[43mexpdata_ideal\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mexp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun\u001b[49m\u001b[43m(\u001b[49m\u001b[43mAerSimulator\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mshots\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mshots\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[64], line 58\u001b[0m, in \u001b[0;36mRandomizedMeasurement.__exit__\u001b[0;34m(self, exc_type, exc_val, exc_tb)\u001b[0m\n\u001b[1;32m     57\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__exit__\u001b[39m(\u001b[38;5;28mself\u001b[39m, exc_type, exc_val, exc_tb):\n\u001b[0;32m---> 58\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m__swapper\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;21;43m__exit__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mexc_type\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mexc_val\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mexc_tb\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[54], line 46\u001b[0m, in \u001b[0;36mBaseManager.__exit__\u001b[0;34m(self, exc_type, exc_val, exc_tb)\u001b[0m\n\u001b[1;32m     39\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m obj_method_key, class_method_key \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mzip\u001b[39m(\n\u001b[1;32m     40\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m__old_instance_methods\u001b[38;5;241m.\u001b[39mkeys(),\n\u001b[1;32m     41\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m__old_class_methods\u001b[38;5;241m.\u001b[39mkeys()):\n\u001b[1;32m     43\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m__target\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__dict__\u001b[39m[obj_method_key] \u001b[38;5;241m=\u001b[39m \\\n\u001b[1;32m     44\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m__old_instance_methods[obj_method_key]\n\u001b[0;32m---> 46\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m__target\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;18;43m__class__\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;18;43m__dict__\u001b[39;49m\u001b[43m[\u001b[49m\u001b[43mclass_method_key\u001b[49m\u001b[43m]\u001b[49m \u001b[38;5;241m=\u001b[39m \\\n\u001b[1;32m     47\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m__old_class_methods[class_method_key]\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'mappingproxy' object does not support item assignment"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'0000': 50081, '1111': 49919}\n"
      ]
     }
    ],
